Time: 1 ms (53.02%), Space: 42.7 MB (33.61%) - LeetHub